Some minor 1.5 updates, generics/valueOf.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@672802 13f79535-47bb-0310-9956-ffa450edef68